@@ -2,6 +2,7 @@ CHANGELOG
 =========
 
 * 1.2.x
+  * [EntityPickerType] Ajout options "label_add" et "label_list"
   * [BC break] Suppression du paramètre "remove" dans fonctions twig "flash_confirm" et "flash_error"
 
 * 1.1.x
